--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
-.container {
-  width: 70%;
+.container-fluid {
   margin: auto;
   text-align: center;
 }
 
 .dice {
   text-align: center;
-  display: inline-block;
 
 }
 
@@ -18,7 +16,7 @@ h1 {
   margin: 30px;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
-  font-size: 8rem;
+  font-size: 3rem;
   color: #4ECCA3;
 }
 
@@ -29,7 +27,7 @@ p {
 }
 
 img {
-  width: 80%;
+  width: 70%;
 }
 
 footer {
@@ -37,5 +35,8 @@ footer {
   color: #EEEEEE;
   text-align: center;
   font-family: 'Indie Flower', cursive;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
 }
